# aipr

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Makefile  README.md
.github/workflows/: ci-cd.yml
src/: main.rs
